fixed witdth bug with nav component on mobile phones

--- a/src/app/shared/components/header/header.component.sass
+++ b/src/app/shared/components/header/header.component.sass
@@ -36,6 +36,7 @@ header
         justify-content: center
         align-items: center
         position: sticky
+        width: 100%
 
         .menu_title
             padding: 0.5rem
@@ -44,7 +45,7 @@ header
 
             .menuButton
                 position: relative
-                left: -1rem
+                left: 1.3rem
                 background: none
                 border: none
                 width: 100%
@@ -86,6 +87,7 @@ header
             grid-template-columns: 50% 50%
 
         .shownMenu
+            padding: 1rem
             display: grid
             align-items: end
             grid-template-columns: 50% 50%
